--- a/app/src/main/res/layout/activity_jemput.xml
+++ b/app/src/main/res/layout/activity_jemput.xml
@@ -15,7 +15,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editTextnamaacara" />
+        android:id="@+id/namaAcara" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,6 +24,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="phone"
         android:id="@+id/editTextnotelp" />
 
     <TextView
