--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -222,7 +222,8 @@ tools:context="${relativePackage}.${activityClass}">
             android:layout_width="130dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            app:cardCornerRadius="12dp">
+            app:cardCornerRadius="12dp"
+            android:onClick="tukarPoinUser">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -356,6 +357,7 @@ tools:context="${relativePackage}.${activityClass}">
                 android:orientation="vertical"
                 android:background="@drawable/sampahimg">
                 <TextView
+                    android:id="@+id/labelTotalSampah"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total Sampah"
@@ -373,6 +375,7 @@ tools:context="${relativePackage}.${activityClass}">
                     android:paddingTop="10dp"
                     android:textColor="@color/white" />
                 <TextView
+                    android:id="@+id/labelKilogram"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -392,6 +395,7 @@ tools:context="${relativePackage}.${activityClass}">
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewKertas"
             android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="160dp"
             android:layout_height="130dp"
@@ -432,6 +436,7 @@ tools:context="${relativePackage}.${activityClass}">
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewPlastik"
             android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="160dp"
             android:layout_height="130dp"
