--- a/app/src/main/res/layout/activity_jemput.xml
+++ b/app/src/main/res/layout/activity_jemput.xml
@@ -111,6 +111,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/imageView" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:id="@+id/imageName"/>
 
     <Button
         android:layout_width="match_parent"
