--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -262,6 +262,7 @@ tools:context="${relativePackage}.${activityClass}">
             android:id="@+id/pesananButton"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="pesananJemputSampah"
             android:layout_width="130dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
