--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="logo_w_h">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+<!--    profil-->
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="headerTextSize">28sp</dimen>
 </resources>
