--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -294,6 +294,7 @@ tools:context="${relativePackage}.${activityClass}">
             android:id="@+id/tugasButton"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="tugasJemputSampah"
             android:layout_width="130dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
