--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -381,7 +381,7 @@ tools:context="${relativePackage}.${activityClass}">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Kilogram"
+                    android:text="Gram"
                     android:padding="5dp"
                     android:textStyle="bold"
                     android:textColor="@color/white"/>
@@ -417,6 +417,14 @@ tools:context="${relativePackage}.${activityClass}">
                     android:layout_marginLeft="5sp"
                     android:textColor="@color/white"/>
                 <TextView
+                    android:id="@+id/hargaKertas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="harga"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="5sp"
+                    android:textColor="@color/white"/>
+                <TextView
                     android:id="@+id/totalBeratKertas"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
@@ -430,7 +438,7 @@ tools:context="${relativePackage}.${activityClass}">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Kilogram"
+                    android:text="Gram"
                     android:padding="5dp"
                     android:textStyle="bold"
                     android:textColor="@color/white"/>
@@ -458,6 +466,14 @@ tools:context="${relativePackage}.${activityClass}">
                     android:layout_marginLeft="5sp"
                     android:textColor="@color/white"/>
                 <TextView
+                    android:id="@+id/hargaPlastik"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="harga"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="5sp"
+                    android:textColor="@color/white"/>
+                <TextView
                     android:id="@+id/totalBeratPlastik"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
@@ -471,7 +487,7 @@ tools:context="${relativePackage}.${activityClass}">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Kilogram"
+                    android:text="Gram"
                     android:padding="5dp"
                     android:textStyle="bold"
                     android:textColor="@color/white"/>
