nama toolbar dinamis

--- a/app/src/main/res/layout/content_main_riwayat.xml
+++ b/app/src/main/res/layout/content_main_riwayat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,32 +15,51 @@
 <!--        android:layout_marginLeft="3dp"-->
 <!--        android:layout_marginTop="3dp"-->
 <!--        android:src="@drawable/user" />-->
-    <TextView
-        android:id="@+id/namaFitur"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:text="Nama Fitur"
-        android:textSize="22dp"/>
+        android:layout_gravity="center"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="12dp">
 
-    <TextView
-        android:id="@+id/tanggal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_below="@id/namaFitur"
-        android:text="yyyy-MM-dd"
-        android:textSize="18dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/namaFitur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:text="Nama Fitur"
+                android:textSize="22dp" />
+
+            <TextView
+                android:id="@+id/tanggal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/namaFitur"
+                android:layout_marginLeft="3dp"
+                android:text="yyyy-MM-dd"
+                android:textSize="18dp" />
 
 
-    <TextView
-        android:id="@+id/poin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="3dp"
-        android:text="0 poin"/>
+            <TextView
+                android:id="@+id/poin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="3dp"
+                android:text="0 poin" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
