--- a/app/src/main/res/layout/content_main_pesanan.xml
+++ b/app/src/main/res/layout/content_main_pesanan.xml
@@ -6,88 +6,109 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/appIcon"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentLeft="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:layout_marginLeft="3dp"-->
-<!--        android:layout_marginTop="3dp"-->
-<!--        android:src="@drawable/user" />-->
-    <TextView
-        android:id="@+id/namaAcaraPesanan"
+    <!--    <ImageView-->
+    <!--        android:id="@+id/appIcon"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentLeft="true"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_marginLeft="3dp"-->
+    <!--        android:layout_marginTop="3dp"-->
+    <!--        android:src="@drawable/user" />-->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewPesanan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:text="Nama Acara"
-        android:textSize="22dp"/>
+        android:layout_margin="10dp"
+        app:cardCornerRadius="12dp">
 
-    <TextView
-        android:id="@+id/tanggalJemputPesanan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_below="@id/namaAcaraPesanan"
-        android:text="yyyy-MM-dd"
-        android:textSize="18dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/separatorPesanan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/namaAcaraPesanan"
-        android:layout_toRightOf="@id/tanggalJemputPesanan"
-        android:layout_marginLeft="3dp"
-        android:text=" - "
-        android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/namaAcaraPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:text="Nama Acara"
+                android:textSize="22dp"/>
+            <TextView
+                android:id="@+id/idPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:text="id"
+                android:visibility="gone"
+                android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/waktuJemputPesanan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/namaAcaraPesanan"
-        android:layout_toRightOf="@id/separatorPesanan"
-        android:layout_marginLeft="3dp"
-        android:text="HH:mm:ss"
-        android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/tanggalJemputPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_below="@id/namaAcaraPesanan"
+                android:text="yyyy-MM-dd"
+                android:textSize="18dp"/>
 
-    <TextView
-        android:id="@+id/alamatJemputPesanan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tanggalJemputPesanan"
-        android:layout_marginLeft="3dp"
-        android:text="alamat"
-        android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/separatorPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/namaAcaraPesanan"
+                android:layout_toRightOf="@id/tanggalJemputPesanan"
+                android:layout_marginLeft="3dp"
+                android:text=" - "
+                android:textSize="18dp"/>
 
-    <TextView
-        android:id="@+id/perkiraanBS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="3dp"
-        android:text="0 kg" />
+            <TextView
+                android:id="@+id/waktuJemputPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/namaAcaraPesanan"
+                android:layout_toRightOf="@id/separatorPesanan"
+                android:layout_marginLeft="3dp"
+                android:text="HH:mm:ss"
+                android:textSize="18dp"/>
 
-    <Button
-        android:id="@+id/terima"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="3dp"
-        android:layout_below="@id/alamatJemputPesanan"
-        android:text="Terima"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="@color/white"/>
+            <TextView
+                android:id="@+id/alamatJemputPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tanggalJemputPesanan"
+                android:layout_marginLeft="3dp"
+                android:text="alamat"
+                android:textSize="18dp"/>
 
-    <Button
-        android:id="@+id/tolak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="3dp"
-        android:layout_below="@id/alamatJemputPesanan"
-        android:layout_toLeftOf="@id/terima"
-        android:background="@color/input_login_hint"
-        android:text="Tolak" />
+            <TextView
+                android:id="@+id/perkiraanBS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="3dp"
+                android:text="0 kg" />
 
+            <Button
+                android:id="@+id/terimaPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="3dp"
+                android:layout_below="@id/alamatJemputPesanan"
+                android:text="Terima"
+                android:background="@color/colorPrimaryDark"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/tolakPesanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:layout_below="@id/alamatJemputPesanan"
+                android:layout_toLeftOf="@id/terimaPesanan"
+                android:background="@color/input_login_hint"
+                android:text="Tolak" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
