--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:paddingTop="10dp"
-                                    android:text="totalpoin"
+                                    android:text="0"
                                     android:textColor="@color/colorPrimaryDark"
                                     android:textSize="16sp"
                                     android:textStyle="bold" />
@@ -404,7 +404,7 @@
                                 android:layout_gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="g"
+                                android:text="0"
                                 android:textStyle="bold"
                                 android:textSize="55sp"
                                 android:paddingTop="10dp"
@@ -470,7 +470,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:paddingTop="10dp"
-                                android:text="g"
+                                android:text="0"
                                 android:textColor="@color/white"
                                 android:textSize="35sp"
                                 android:textStyle="bold" />
@@ -526,7 +526,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:paddingTop="10dp"
-                                android:text="g"
+                                android:text="0"
                                 android:textColor="@color/white"
                                 android:textSize="35sp"
                                 android:textStyle="bold" />
