--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -54,51 +54,66 @@
             android:id="@+id/imageName"/>
     </LinearLayout>
 
+
     <LinearLayout
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal"
-        android:paddingLeft="45dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/ic_account"/>
-
-        <TextView
-            android:id="@+id/namaProfil"
-            android:onClick="ShowPopupName"
-            android:layout_width="266dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:text="@string/hint_name"
-            android:textColor="@color/lbl_name"/>
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:paddingLeft="45dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/ic_call_black_24dp"/>
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/ic_account" />
 
-        <TextView
-            android:id="@+id/nohpProfil"
-            android:onClick="ShowPopupNohp"
-            android:layout_width="266dp"
+            <TextView
+                android:id="@+id/namaProfil"
+                android:layout_width="266dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@layout/rounded_border_edittext"
+                android:onClick="ShowPopupName"
+                android:paddingLeft="20dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:text="@string/hint_name"
+                android:textColor="@color/lbl_name"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:text="@string/hint_nohp"
-            android:textColor="@color/lbl_name"/>
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/ic_call_black_24dp" />
+
+            <TextView
+                android:id="@+id/nohpProfil"
+                android:layout_width="266dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@layout/rounded_border_edittext"
+                android:paddingLeft="20dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:text="@string/hint_nohp"
+                android:textColor="@color/lbl_name"
+                android:textStyle="bold" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
